--- a/app/views/question_answers/index.html.erb
+++ b/app/views/question_answers/index.html.erb
@@ -1,32 +1,14 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Question Answers</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Question</th>
-      <th>Answer</th>
-      <th>Image</th>
-      <th>Tech</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @question_answers.each do |question_answer| %>
-      <tr>
-        <td><%= question_answer.question %></td>
-        <td><%= question_answer.answer %></td>
-        <td><%= question_answer.image %></td>
-        <td><%= question_answer.tech %></td>
-        <td><%= link_to 'Show', question_answer %></td>
-        <td><%= link_to 'Edit', edit_question_answer_path(question_answer) %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
+<h1>Interview Question and Answers</h1>
 <%= link_to 'New Question answer', new_question_answer_path %>
+
+<% @question_answers.each do |q_a| %>
+  <h3>Question</h3>
+    <%= q_a.question %>
+  <h3>Answer</h3>
+    <%= q_a.answer %>
+
+  <%= link_to 'Show', q_a %>
+  <%= link_to 'Edit', edit_question_answer_path(q_a) %>
+<% end %>
