--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,5 +1,6 @@
 body {
-  background-color: #fff;
+  // background-color: rgba(0,0,0,0.7);
+  background-color: #24292e;
   color: #333;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
