--- a/app/assets/stylesheets/question_answers.scss
+++ b/app/assets/stylesheets/question_answers.scss
@@ -8,11 +8,61 @@
   background-color: white;
   padding: 2em;
 }
+.image-div{
+  text-align: center;
+}
 .feature-image{
   max-width: 500px;
   max-height: 300px;
 }
 .nav-custom{
   padding: 2em;
+  font-size: 1.3em;
+  background-color: #24292e;
+}
+.nav-custom a{
+  padding-left: 2em;
+  padding-right: 2em;
+  color: rgba(255,255,255,0.7);
+}
+.nav-custom a:visited{
+  color: rgba(255,255,255,0.5);
+  background-color: #24292e;
+}
+.nav-custom a:hover{
+  color: white;
+  background-color: #24292e;
+}
+.nav-custom, a:hover{
+  text-decoration: none;
   font-size: 1.2em;
+  background-color: #24292e;
+}
+.question, .answer{
+  font-size: 1.2em;
+}
+h3{
+  text-decoration: underline;
+}
+.nav-controls a:hover{
+  text-decoration: line-through;
+  background-color: white;
+  color: black;
+}
+.btn-div-custom{
+  text-align: center;
+}
+.btn-custom{
+  background-color: white;
+  color: #24292e;
+  border: 1px solid #24292e;
+}
+.btn-custom:hover{
+  background-color: #24292e;
+}
+textarea.form-question{
+  height: 5em;
+}
+textarea.form-answer{
+  height: 15em;
 }
