--- a/app/views/question_answers/edit.html.erb
+++ b/app/views/question_answers/edit.html.erb
@@ -1,6 +1,8 @@
 <h1>Editing Question Answer</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @question_answer %> |
-<%= link_to 'Back', question_answers_path %>
+<br>
+<br>
+<div class="nav-controls">
+  <%= link_to 'Back', question_answers_path %>
+</div>
