--- a/app/views/question_answers/index.html.erb
+++ b/app/views/question_answers/index.html.erb
@@ -4,15 +4,24 @@
 
 <% @question_answers.each do |q_a| %>
   <h3>Question</h3>
-    <%= q_a.question %>
+    <div class="question">
+      <%= simple_format(q_a.question) %>
+    </div>
   <h3>Answer</h3>
-    <%= q_a.answer %>
-  <h4>Diagramatic Illustration</h4>
+  <div class="answer">
+    <%= simple_format(q_a.answer) %>
+  </div>
     <% if !q_a.image.empty? %>
-      <%= cl_image_tag q_a.image %>
+    <h4>Diagramatic Illustration</h4>
+      <div class="image-div">
+        <%= cl_image_tag q_a.image %>
+      </div>
     <% end %>
   <br>
+  <div class="nav-controls">
+    | <%= link_to 'Show', q_a %> |
+    | <%= link_to 'Edit', edit_question_answer_path(q_a) %> |
+  </div>
   <br>
-  | <%= link_to 'Show', q_a %> |
-  | <%= link_to 'Edit', edit_question_answer_path(q_a) %> |
+  <br>
 <% end %>
