--- a/app/views/question_answers/_form.html.erb
+++ b/app/views/question_answers/_form.html.erb
@@ -28,6 +28,6 @@
     <%= f.text_area :tech, :class=>"form-control textfield-border" %>
   </div>
   <div class="button-center btn-div-custom">
-    <%= f.submit :class=>"btn btn-primary btn-custom" %>
+    <%= f.submit :class=>"btn btn-primary btn-custom", :id=>"submit-answer" %>
   </div>
 <% end %>
