--- a/app/views/question_answers/new.html.erb
+++ b/app/views/question_answers/new.html.erb
@@ -2,4 +2,8 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', question_answers_path %>
+<br>
+<br>
+<div class="nav-controls">
+  <%= link_to 'Back', question_answers_path %>
+</div>
