--- a/app/views/question_answers/index.html.erb
+++ b/app/views/question_answers/index.html.erb
@@ -11,11 +11,13 @@
   <div class="answer">
     <%= simple_format(q_a.answer) %>
   </div>
-    <% if !q_a.image.present? %>
-    <h4>Diagramatic Illustration</h4>
-      <div class="image-div">
-        <%= cl_image_tag q_a.image %>
-      </div>
+    <% if q_a.image.present? %>
+      <% if !q_a.image.empty? %>
+        <h4>Diagramatic Illustration</h4>
+        <div class="image-div">
+          <%= cl_image_tag q_a.image %>
+        </div>
+      <% end %>
     <% end %>
   <br>
   <div class="nav-controls">
