--- a/app/views/question_answers/index.html.erb
+++ b/app/views/question_answers/index.html.erb
@@ -2,28 +2,13 @@
 <h1>Web development</h1>
 <h1>Interview Question and Answers</h1>
 
+<div class="col-md-6">
 <% @question_answers.each do |q_a| %>
-  <h3>Question</h3>
-    <div class="question">
-      <%= simple_format(q_a.question) %>
-    </div>
-  <h3>Answer</h3>
-  <div class="answer">
-    <%= simple_format(q_a.answer) %>
-  </div>
-    <% if q_a.image.present? %>
-      <% if !q_a.image.empty? %>
-        <h4>Diagramatic Illustration</h4>
-        <div class="image-div">
-          <%= cl_image_tag q_a.image %>
-        </div>
-      <% end %>
-    <% end %>
   <br>
-  <div class="nav-controls">
-    | <%= link_to 'Show', q_a %> |
-    | <%= link_to 'Edit', edit_question_answer_path(q_a) %> |
-  </div>
-  <br>
-  <br>
+  <%= link_to simple_format(q_a.question), q_a, :remote => true, :class=>"index_link"  %>
 <% end %>
+</div>
+<div class="col-md-6">
+  <div id="answer">
+  </div>
+</div>
