--- a/app/views/question_answers/show.js.erb
+++ b/app/views/question_answers/show.js.erb
@@ -1,1 +1,3 @@
-$('#answer').html("<%= escape_javascript(render :partial => 'show', locals: {question_answer: @question_answer}) %>");
+$(".answer").hide();
+$("#answer<%= @question_answer.id %>").show();
+$("#answer<%= @question_answer.id %>").html("<%= escape_javascript(render :partial => 'show', locals: {question_answer: @question_answer}) %>");
